# V8Shell

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  args.gn
include/: Commands.h  V8SLinuxApi.h  V8SWindowsApi.h  V8Shell.h  console.hpp
src/: CMakeLists.txt  V8Shell.cpp  V8Shell.h  main.cpp
src/Commands/: CMakeLists.txt  Commands.cpp  Commands.h
src/Commands/Linux/: CMakeLists.txt  V8SLinuxApi.cpp
src/Commands/Windows/: CMakeLists.txt  V8SWindowsApi.cpp
src/V8Shell/: CMakeLists.txt  V8Shell.cpp
tests/: CMakeLists.txt  test_ressources.hpp  unit_tests.cpp
tests/scripts/: copy-different-dir.js  copy.js  mkdir.js  move.js  rename-failure.js  rename-success.js  rm-any-dir.js  rm-any-file.js  rm-dir-dir-.js  rm-dir-file.js  rm-file-dir.js  rm-file-file.js  spawn-helper-1.js  touch.js  win-spawn-process-no-args.js
